# crossway

./: .gitignore  app.py  boxes.ipynb  config.py  materialize_labels.ipynb  pyproject.toml  requirements.txt  stream_grabber.py  zhadina.ipynb
notebooks/: crossway_cars_final.ipynb  load_images.ipynb  materialize_labels.ipynb  stream_grabber.ipynb  zhadina.ipynb
sample_data/: labels.json
src/: capture.py  client.py  detector.py  mqtt.py  zhadina.py
