[tool.poetry]
name = "crossway"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.2"
opencv-python = "^4.5.1"
jupyter = "^1.0.0"
keras = "^2.4.3"
m3u8 = "^0.8.0"
certifi = "^2020.12.5"
matplotlib = "^3.3.4"
tensorflow = "^2.4.1"
shapely = "^1.7.1"
scikit-image = "^0.18.1"
sklearn = "^0.0"
opencv-contrib-python = "^4.5.1"
paho-mqtt = "^1.5.1"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
